fix(style): delete header fixed

--- a/src/components/layout/header.less
+++ b/src/components/layout/header.less
@@ -2,8 +2,8 @@
 .normal {
   max-height: 64px;
   overflow: hidden;
-  position: fixed;
-  width: 100%;
+  // position: fixed;
+  // width: 100%;
 }
 
 .logo {
